fixes bug 103070 "No new connections issued when waiting for timeout" r=bbaetz, sr=mscott