netwerk/protocol/http/src/nsHttpHandler.h
@@ -225,6 +225,7 @@ private:
     PRUint16 mMaxConnections;
     PRUint8  mMaxConnectionsPerServer;
     PRUint8  mMaxPersistentConnectionsPerServer;
+    PRUint8  mMaxPersistentConnectionsPerProxy;
 
     nsCString mAccept;
     nsCString mAcceptLanguages;
